[package]
name = "market-maker"
version = "0.1.0"
edition = "2021"

# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.14"
chrono = "0.4"
ctrlc = "3.1.9"
prettytable-rs = "0.8.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
websocket = "0.26.2"
